fix: update ab testing

--- a/02_ab_testing.ipynb
+++ b/02_ab_testing.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "9d8ec736-999f-44cb-b913-e4e5d9d4c070",
    "metadata": {},
    "outputs": [],
@@ -52,10 +52,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "86a9198c-8c4e-4650-ad66-08883d1bfdcd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.27626589002132"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.random.seed(17)\n",
     "\n",
@@ -72,10 +83,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f2429a7c-2988-4fb7-ac88-871808a29445",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.27626589002132\n",
+      "8.145371921193496\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(17)\n",
     "\n",
@@ -93,10 +113,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3dde279c-1198-4c61-b234-033879274d16",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.079428443806204\n",
+      "12.190202357414222\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(18)\n",
     "\n",
@@ -122,10 +151,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fb2454c7-05b1-49a2-9840-95b515e6aa9c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.111509794247766\n",
+      "10.008382946497413\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(17)\n",
     "\n",
@@ -135,10 +173,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e9cee972-81e8-489b-92d5-94b4d3980217",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.880880186907996\n",
+      "9.99591773728191\n"
+     ]
+    }
+   ],
    "source": [
     "print(np.array([trading_system(\"ASDAQ\") for _ in range(100)]).mean())\n",
     "print(np.array([trading_system(\"BYSE\") for _ in range(100)]).mean())"
@@ -156,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e136c084-668b-40a9-9768-7c19bac8da47",
    "metadata": {},
    "outputs": [],
@@ -173,10 +220,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "77035153-8809-4f28-9cb2-c78c036b9d59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.611509794247766\n",
+      "12.008382946497411\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(17)\n",
     "\n",
@@ -194,10 +250,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f53ba36d-c04e-4d85-bbc4-7ce497222733",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.611509794247766\n",
+      "12.008382946497411\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(17)\n",
     "\n",
@@ -225,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b2c68450-93be-4f75-800b-c52a22514003",
    "metadata": {},
    "outputs": [],
@@ -244,10 +309,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "336ff059-8d8f-4e91-b722-9ca910909bed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13.39588870623852, 11.259639285763223)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.random.seed(17)\n",
     "\n",
@@ -280,10 +356,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ec09e863-ef35-4d79-9186-838218277f70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12.27626589, 10.14537192, 12.62390111])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.random.seed(17)\n",
     "\n",
@@ -293,37 +380,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ca1b81cc-7fb8-4c2e-b3de-785ca1524b0f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.681846307513723"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "measurements.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "44c359aa-f2ba-4667-bdb6-a877134e0cf4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.27626589, -1.85462808,  0.62390111])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "measurements - 12"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6589dd30-9028-4440-a391-5bba3da837c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.3181536924862769"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "measurements.mean() - 12"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f530a349-5e8d-4154-a2ad-caa02a2c194d",
    "metadata": {},
    "outputs": [],
@@ -337,10 +457,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "6e443692-bef8-40e6-9b55-eb62f0acd542",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.000257642551059\n",
+      "10.051095649188758\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(17)\n",
     "\n",
@@ -350,10 +479,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8cef663b-09c5-4d4d-82a2-e350e081aee9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.987318214094266\n",
+      "10.021053044438455\n"
+     ]
+    }
+   ],
    "source": [
     "print(aggregate_measurement(\"ASDAQ\", 300))\n",
     "print(aggregate_measurement(\"BYSE\", 300))"
@@ -369,10 +507,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "7aecdae7-72d0-4f93-816f-036af279d039",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5778543829446465, 0.1794924850151226, 0.058012150188856464)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "agg_3 = np.array([aggregate_measurement(\"ASDAQ\", 3) for _ in range(1000)])\n",
     "agg_30 = np.array([aggregate_measurement(\"ASDAQ\", 30) for _ in range(1000)])\n",
@@ -391,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e6f6ec4a-7c9f-4345-a9b5-4a397177d138",
    "metadata": {},
    "outputs": [],
@@ -402,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "75a1b1fe-d259-4f30-a56f-800c5acb84aa",
    "metadata": {},
    "outputs": [],
@@ -417,10 +566,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "09139ad4-e60f-4dbe-a762-fee674af7476",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12.000257642551059, 0.060254756364981225)\n",
+      "(10.051095649188758, 0.05714189794415452)\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(17)\n",
     "\n",
@@ -446,10 +604,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "33216599-6851-4b24-a370-e7aaf51ce6c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-4.4851273191475025"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.random.seed(17)\n",
     "\n",
@@ -466,10 +635,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "d8cd5ad7-b35a-4234-9efa-92e6633995a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2815515655446004\n",
+      "0.9494974165258963\n",
+      "0.050502583474103704 0.10100516694820741\n",
+      "\n",
+      "1.644853626951472\n",
+      "0.9750021048517795\n",
+      "0.04999579029644087\n",
+      "\n",
+      "2.3263478740408408\n",
+      "0.995002467684265\n",
+      "0.009995064631470029\n"
+     ]
+    }
+   ],
    "source": [
     "import scipy.stats as st\n",
     "\n",
@@ -495,10 +682,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "d1e81baf-8eab-48d1-8b88-c387e5a5c8df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.31731050786291415\n",
+      "0.04999579029644087\n",
+      "0.013138238271093524\n",
+      "5.733031437583869e-07\n"
+     ]
+    }
+   ],
    "source": [
     "for z_score in [1, 1.96, 2.48, 5.0]:\n",
     "    p_value = st.norm.sf(abs(z_score)) * 2  # two-tailed test\n",
@@ -537,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "f9a9eec5-e68b-43a3-a277-e5ee291c327e",
    "metadata": {},
    "outputs": [],
@@ -549,12 +747,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "ab6e7276-19e2-43a1-bf1d-b5773e7352f1",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.random.seed(17)\n",
     "\n",
@@ -583,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "e726ce43-24b6-4d04-8e80-3af133457341",
    "metadata": {},
    "outputs": [],
@@ -596,10 +805,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "5280d6f0-72f4-4380-afdf-f15da514c704",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.random.seed(17)\n",
     "\n",
@@ -620,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "b801fec8-50cf-4169-ae00-07af9542433d",
    "metadata": {},
    "outputs": [],
@@ -641,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "51c3c433-5926-458c-8f65-d373d6b88b65",
    "metadata": {},
    "outputs": [],
@@ -653,17 +873,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "8d6c9810-1cb6-4181-94c5-972c1eb09186",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.7483767796620846"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ind_byse.mean() - ind_asdaq.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "14013512-3e18-4e64-8447-8e6318426608",
    "metadata": {},
    "outputs": [],
@@ -684,17 +915,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "3f227355-69a4-47ff-b3cc-f295306e2ca1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-6.353995237966593"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "analyze(ind_asdaq, ind_byse)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "1c0079b1-7a5d-4531-b71b-b9fb0c984c7a",
    "metadata": {},
    "outputs": [],
@@ -703,26 +945,39 @@
     "    assert isinstance(dist1, np.ndarray), \"dist1 is not np.ndarray\"\n",
     "    assert isinstance(dist2, np.ndarray), \"dist2 is not np.ndarray\"\n",
     "\n",
-    "    num = dist2.mean() - dist1.mean()\n",
-    "    den = np.sqrt((dist1.std() ** 2) / len(dist1) + (dist2.std() ** 2) / len(dist2))\n",
-    "    return num / den"
+    "    mean1 = dist1.mean()\n",
+    "    std_err1 = dist1.std() / np.sqrt(len(dist1))\n",
+    "\n",
+    "    mean2 = dist2.mean()\n",
+    "    std_err2 = dist2.std() / np.sqrt(len(dist2))\n",
+    "\n",
+    "    delta = mean2 - mean1\n",
+    "    std_err_delta = np.sqrt(std_err2**2 + std_err1**2)\n",
+    "\n",
+    "    z = delta / std_err_delta\n",
+    "    return z"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "84e545dc-78b3-4e04-9106-dab9eb74b78f",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f35ffe4-ac8f-4642-a129-7b4cf3d5f8f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-6.353995237966593"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z_score(ind_asdaq, ind_byse)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -742,10 +997,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "46d2fec4-a91e-4815-93d2-7876095613e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6.202020909921336, 5.574266926940068e-10, -6.0920335108226755)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import scipy.stats as st\n",
     "from statsmodels.stats.weightstats import ztest\n",
@@ -757,10 +1023,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "6ce12f4d-fa3a-49ff-b754-efee26b92d0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.714722572276173"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from statsmodels.stats.power import TTestIndPower, TTestPower\n",
     "\n",
@@ -780,22 +1057,6 @@
     "- measure: collect the prescribed number of individual measurements, and randomize between variants to remove confounder bias\n",
     "- analyze: ensure the difference in cost between BYSE and ASDAQ was **practically significant** (`delta <- prac_sig`) and **statistically significant** (`delta/se_delta <- 1.64`)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95bad898-62e6-4991-aee5-a9ca786d8aa8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8a3d4fe-d458-402b-ad62-f6f67bc9d223",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
