chore: update notes

--- a/02_ab_testing.ipynb
+++ b/02_ab_testing.ipynb
@@ -15,6 +15,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "50969ab1-a46b-4862-8050-b77504e06c67",
+   "metadata": {},
+   "source": [
+    "See here https://rowannicholls.github.io/python/statistics/sample_size.html\n",
+    "\n",
+    "The calculation should be similar to [2.1.2 Two × One-Sided Equality](https://rowannicholls.github.io/python/statistics/sample_size.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cf4e404c-a859-48b7-81f3-7ebaf48b0cbe",
    "metadata": {
     "execution": {
@@ -735,31 +745,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "id": "f9a9eec5-e68b-43a3-a277-e5ee291c327e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def ab_test_design(sd_1_delta, practical_significance):\n",
     "    num_individual_measurements = (1.64 * sd_1_delta / practical_significance) ** 2\n",
+    "    print(num_individual_measurements)\n",
     "    return np.ceil(num_individual_measurements)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "id": "ab6e7276-19e2-43a1-bf1d-b5773e7352f1",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.75708875830369\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "7.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,6 +790,32 @@
     "sd_1_delta = np.sqrt(sd_1_asdaq**2 + sd_1_byse**2)\n",
     "practical_significance = 1\n",
     "ab_test_design(sd_1_delta, practical_significance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "35387baf-fb7e-4cfb-8cf6-742f522f5344",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.058765593255738"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statsmodels.stats.api as sm\n",
+    "\n",
+    "# effect_size is the difference in mean divided by the std deviation\n",
+    "sm.tt_ind_solve_power(\n",
+    "    effect_size=2 / sd_1_byse, ratio=1, power=0.8, alpha=0.05, alternative=\"two-sided\"\n",
+    ")"
    ]
   },
   {
@@ -831,6 +875,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "85a701ab-dd14-4520-9b92-c6f7202b9bae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9.120803496444017, 0.9934308808644532, -2.3263478740408408)"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy import stats\n",
+    "\n",
+    "m = sm.tt_ind_solve_power(\n",
+    "    effect_size=2 / 1.12, ratio=1, power=0.8, alpha=0.01, alternative=\"two-sided\"\n",
+    ")\n",
+    "m, stats.norm.cdf(2.48), stats.norm.ppf(0.01)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a61e4f98-622a-48ef-9eb7-af0a8d693ac2",
    "metadata": {},
@@ -840,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 119,
    "id": "b801fec8-50cf-4169-ae00-07af9542433d",
    "metadata": {},
    "outputs": [],
@@ -861,29 +931,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 139,
    "id": "51c3c433-5926-458c-8f65-d373d6b88b65",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(17)\n",
     "\n",
-    "ind_asdaq, ind_byse = measure(16)"
+    "# ind_asdaq, ind_byse = measure(16)\n",
+    "ind_asdaq, ind_byse = measure(3)\n",
+    "print(len(ind_asdaq), len(ind_byse))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 140,
    "id": "8d6c9810-1cb6-4181-94c5-972c1eb09186",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-2.7483767796620846"
+       "-1.1870713644978501"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 141,
    "id": "14013512-3e18-4e64-8447-8e6318426608",
    "metadata": {},
    "outputs": [],
@@ -915,17 +995,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 142,
    "id": "3f227355-69a4-47ff-b3cc-f295306e2ca1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-6.353995237966593"
+       "-3.0855234054503917"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 143,
    "id": "1c0079b1-7a5d-4531-b71b-b9fb0c984c7a",
    "metadata": {},
    "outputs": [],
@@ -960,17 +1040,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 144,
    "id": "84e545dc-78b3-4e04-9106-dab9eb74b78f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-6.353995237966593"
+       "-3.0855234054503917"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,17 +1077,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 145,
    "id": "46d2fec4-a91e-4815-93d2-7876095613e2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6.202020909921336, 5.574266926940068e-10, -6.0920335108226755)"
+       "(1.2596596554613593, 0.20779216525007327, -0.814105822690334)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 179,
    "id": "6ce12f4d-fa3a-49ff-b754-efee26b92d0a",
    "metadata": {},
    "outputs": [
@@ -1033,7 +1113,7 @@
        "16.714722572276173"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,6 +1136,124 @@
     "- design: determined the minimum number of individual measurements needed to be able to detect statistical significance. That number was given by $(2.48 * st_1_delta / prac_sig)**2$\n",
     "- measure: collect the prescribed number of individual measurements, and randomize between variants to remove confounder bias\n",
     "- analyze: ensure the difference in cost between BYSE and ASDAQ was **practically significant** (`delta <- prac_sig`) and **statistically significant** (`delta/se_delta <- 1.64`)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "b080bea5-5cd6-405d-a4cf-2e23a651d237",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16.0, 16.0)"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Mean of group 1, μ_1\n",
+    "mu_1 = 11\n",
+    "# Mean of group 2, μ_2\n",
+    "mu_2 = 10\n",
+    "# Sample standard deviation of group 1\n",
+    "s_1 = 1.12\n",
+    "# Sample standard deviation of group 2\n",
+    "s_2 = 1.12\n",
+    "# Sampling ratio, κ = n_1 / n_2\n",
+    "kappa = 1\n",
+    "\n",
+    "# Type I error rate, α\n",
+    "alpha = 0.05\n",
+    "# Type II error rate, β\n",
+    "beta = 0.2\n",
+    "is_false_positive = 1  # Replace with 0 to get '7'\n",
+    "\n",
+    "n_1 = (s_1**2 + s_2**2 / kappa) * (\n",
+    "    (st.norm.ppf(1 - alpha) + is_false_positive * st.norm.ppf(1 - beta)) / (mu_1 - mu_2)\n",
+    ") ** 2\n",
+    "n_1 = np.ceil(n_1)\n",
+    "n_2 = kappa * n_1\n",
+    "n_1, n_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "id": "8aa6469d-436d-4509-b3aa-f098009b8dd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7.766226942677346, 15.532453885354691)"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statsmodels.stats.power as sm\n",
+    "\n",
+    "mu_delta = 1\n",
+    "power = 0.8\n",
+    "alpha = 0.05\n",
+    "n_2 = sm.normal_sample_size_one_tail(\n",
+    "    mu_delta, power, alpha, std_null=sd_1_byse, std_alternative=None\n",
+    ")\n",
+    "n_2, n_2 * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "id": "a7ef0bdb-4550-4cf5-b415-28d7a252047e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st.norm.ppf(0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "id": "688582c0-f685-4bb7-85c5-5374f1defbf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.398571768807679, 6.797143537615358)"
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "power = 0.5\n",
+    "n_2 = sm.normal_sample_size_one_tail(\n",
+    "    mu_delta, power, alpha, std_null=sd_1_byse, std_alternative=None\n",
+    ")\n",
+    "n_2, n_2 * 2"
    ]
   }
  ],
