--- a/02_ab_testing.v2.ipynb
+++ b/02_ab_testing.v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2ea250e5-ce2d-4bad-b2fa-a3db8b81bf1f",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$12.66\n",
-      "$12.31\n"
+      "$12.73\n",
+      "$14.94\n",
+      "$12.88\n",
+      "$10.52\n"
      ]
     }
    ],
@@ -49,16 +51,34 @@
     "\n",
     "asdaq = ASDAQ()\n",
     "pprint(asdaq.sample())\n",
-    "pprint(TimeOfDayEffectWrapper(asdaq).sample(tod=\"morning\"))"
+    "\n",
+    "asdaq = TimeOfDayEffectWrapper(asdaq)\n",
+    "pprint(asdaq.sample(\"morning\"))\n",
+    "pprint(asdaq.sample(\"afternoon\"))\n",
+    "\n",
+    "byse = TimeOfDayEffectWrapper(BYSE())\n",
+    "pprint(byse.sample())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "118be9a7-be97-45bd-8fb4-3d86398e7669",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$9.99\n",
+      "$12.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint(np.mean([byse.sample() for _ in range(100)]))\n",
+    "pprint(np.mean([asdaq.sample() for _ in range(100)]))"
+   ]
   }
  ],
  "metadata": {
