docs: update solution

--- a/02_ab_testing.ipynb
+++ b/02_ab_testing.ipynb
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "id": "f9a9eec5-e68b-43a3-a277-e5ee291c327e",
    "metadata": {},
    "outputs": [],
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "id": "ab6e7276-19e2-43a1-bf1d-b5773e7352f1",
    "metadata": {
     "scrolled": true
@@ -777,7 +777,7 @@
        "7.0"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,32 +790,6 @@
     "sd_1_delta = np.sqrt(sd_1_asdaq**2 + sd_1_byse**2)\n",
     "practical_significance = 1\n",
     "ab_test_design(sd_1_delta, practical_significance)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "35387baf-fb7e-4cfb-8cf6-742f522f5344",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6.058765593255738"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import statsmodels.stats.api as sm\n",
-    "\n",
-    "# effect_size is the difference in mean divided by the std deviation\n",
-    "sm.tt_ind_solve_power(\n",
-    "    effect_size=2 / sd_1_byse, ratio=1, power=0.8, alpha=0.05, alternative=\"two-sided\"\n",
-    ")"
    ]
   },
   {
@@ -844,6 +818,7 @@
     "def ab_test_design_2(sd_1_delta, practical_significance):\n",
     "    \"\"\"A/B test design with power analysis\"\"\"\n",
     "    num_individual_measurements = (2.48 * sd_1_delta / practical_significance) ** 2\n",
+    "    print(num_individual_measurements)\n",
     "    return np.ceil(num_individual_measurements)"
    ]
   },
@@ -853,6 +828,13 @@
    "id": "5280d6f0-72f4-4380-afdf-f15da514c704",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.451665191504688\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -876,26 +858,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 47,
    "id": "85a701ab-dd14-4520-9b92-c6f7202b9bae",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9.120803496444017, 0.9934308808644532, -2.3263478740408408)"
+       "(15.51079958367986, 0.9934308808644532, -2.3263478740408408)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import statsmodels.stats.api as sm\n",
     "from scipy import stats\n",
     "\n",
-    "m = sm.tt_ind_solve_power(\n",
-    "    effect_size=2 / 1.12, ratio=1, power=0.8, alpha=0.01, alternative=\"two-sided\"\n",
+    "m = sm.zt_ind_solve_power(\n",
+    "    effect_size=1 / 1.12, ratio=1, power=0.8, alpha=0.05, alternative=\"larger\"\n",
     ")\n",
     "m, stats.norm.cdf(2.48), stats.norm.ppf(0.01)"
    ]
@@ -910,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 31,
    "id": "b801fec8-50cf-4169-ae00-07af9542433d",
    "metadata": {},
    "outputs": [],
@@ -931,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 32,
    "id": "51c3c433-5926-458c-8f65-d373d6b88b65",
    "metadata": {},
    "outputs": [
@@ -953,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 33,
    "id": "8d6c9810-1cb6-4181-94c5-972c1eb09186",
    "metadata": {},
    "outputs": [
@@ -963,7 +946,7 @@
        "-1.1870713644978501"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 34,
    "id": "14013512-3e18-4e64-8447-8e6318426608",
    "metadata": {},
    "outputs": [],
@@ -995,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 35,
    "id": "3f227355-69a4-47ff-b3cc-f295306e2ca1",
    "metadata": {},
    "outputs": [
@@ -1005,7 +988,7 @@
        "-3.0855234054503917"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 36,
    "id": "1c0079b1-7a5d-4531-b71b-b9fb0c984c7a",
    "metadata": {},
    "outputs": [],
@@ -1040,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 37,
    "id": "84e545dc-78b3-4e04-9106-dab9eb74b78f",
    "metadata": {},
    "outputs": [
@@ -1050,7 +1033,7 @@
        "-3.0855234054503917"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 38,
    "id": "46d2fec4-a91e-4815-93d2-7876095613e2",
    "metadata": {},
    "outputs": [
@@ -1087,7 +1070,7 @@
        "(1.2596596554613593, 0.20779216525007327, -0.814105822690334)"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,28 +1085,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e9fd251d-7a4a-475d-bd99-2a9c8e5c0b2a",
+   "metadata": {},
+   "source": [
+    "Calculating sample size "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 179,
-   "id": "6ce12f4d-fa3a-49ff-b754-efee26b92d0a",
+   "execution_count": 39,
+   "id": "bfc8925c-6331-45b5-ba3a-809e9c98f4e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16.714722572276173"
+       "(6.7971436061089205, 7.0)"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from statsmodels.stats.power import TTestIndPower, TTestPower\n",
+    "import statsmodels.stats.api as sm\n",
     "\n",
-    "obj = TTestIndPower()\n",
-    "n = obj.solve_power(effect_size=1, alpha=0.05, power=0.8)\n",
-    "n"
+    "# effect_size is the difference in mean divided by the std deviation\n",
+    "es = practical_significance / sd_1_byse\n",
+    "n1 = sm.zt_ind_solve_power(\n",
+    "    effect_size=es,\n",
+    "    nobs1=None,\n",
+    "    ratio=1,\n",
+    "    power=0.5,  # 0\n",
+    "    alpha=0.05,\n",
+    "    alternative=\"larger\",\n",
+    ")\n",
+    "n1, np.ceil(n1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "70a8f160-329b-4c97-b535-1fda673d0967",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15.53245388534377, 16.0)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n1 = sm.zt_ind_solve_power(\n",
+    "    effect_size=es,\n",
+    "    ratio=1,\n",
+    "    power=0.8,  # 20%\n",
+    "    alpha=0.05,\n",
+    "    alternative=\"larger\",\n",
+    ")\n",
+    "n1, np.ceil(n1)"
    ]
   },
   {
@@ -1140,17 +1167,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 41,
    "id": "b080bea5-5cd6-405d-a4cf-2e23a651d237",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.78766741763457\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(16.0, 16.0)"
+       "(7.0, 7.0)"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,89 +1205,15 @@
     "alpha = 0.05\n",
     "# Type II error rate, β\n",
     "beta = 0.2\n",
-    "is_false_positive = 1  # Replace with 0 to get '7'\n",
+    "is_false_positive = 0  # Replace with 0 to get '7'\n",
     "\n",
     "n_1 = (s_1**2 + s_2**2 / kappa) * (\n",
     "    (st.norm.ppf(1 - alpha) + is_false_positive * st.norm.ppf(1 - beta)) / (mu_1 - mu_2)\n",
     ") ** 2\n",
+    "print(n_1)\n",
     "n_1 = np.ceil(n_1)\n",
     "n_2 = kappa * n_1\n",
     "n_1, n_2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 234,
-   "id": "8aa6469d-436d-4509-b3aa-f098009b8dd1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(7.766226942677346, 15.532453885354691)"
-      ]
-     },
-     "execution_count": 234,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import statsmodels.stats.power as sm\n",
-    "\n",
-    "mu_delta = 1\n",
-    "power = 0.8\n",
-    "alpha = 0.05\n",
-    "n_2 = sm.normal_sample_size_one_tail(\n",
-    "    mu_delta, power, alpha, std_null=sd_1_byse, std_alternative=None\n",
-    ")\n",
-    "n_2, n_2 * 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 235,
-   "id": "a7ef0bdb-4550-4cf5-b415-28d7a252047e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 235,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "st.norm.ppf(0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 236,
-   "id": "688582c0-f685-4bb7-85c5-5374f1defbf4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3.398571768807679, 6.797143537615358)"
-      ]
-     },
-     "execution_count": 236,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "power = 0.5\n",
-    "n_2 = sm.normal_sample_size_one_tail(\n",
-    "    mu_delta, power, alpha, std_null=sd_1_byse, std_alternative=None\n",
-    ")\n",
-    "n_2, n_2 * 2"
    ]
   }
  ],
